--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,10 @@
   "AppSettings": {
     "RedmineUrl": "http://localhost"
   },
+  "JwtAuthorization": {
+    "Key": "temp",
+    "Issuer": "logichealth.com",
+    "Audience": "anyone"
+  },
   "AllowedHosts": "*"
 }
