--- a/RubyMine.csproj
+++ b/RubyMine.csproj
@@ -5,13 +5,21 @@
     <CopyRefAssembliesToPublishDirectory>false</CopyRefAssembliesToPublishDirectory>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Bitnami\RubyMine\RubyMine\RubyMine.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
+    <Compile Remove="Data\**" />
     <Compile Remove="Models_temp\**" />
     <Compile Remove="wwwroot\lib\bootstrap\**" />
+    <Content Remove="Data\**" />
     <Content Remove="Models_temp\**" />
     <Content Remove="wwwroot\lib\bootstrap\**" />
+    <EmbeddedResource Remove="Data\**" />
     <EmbeddedResource Remove="Models_temp\**" />
     <EmbeddedResource Remove="wwwroot\lib\bootstrap\**" />
+    <None Remove="Data\**" />
     <None Remove="Models_temp\**" />
     <None Remove="wwwroot\lib\bootstrap\**" />
   </ItemGroup>
@@ -23,6 +31,8 @@
 
   <ItemGroup>
     <PackageReference Include="Abp" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
@@ -33,13 +43,13 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.14.1" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="5.13.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
     <Folder Include="DbContexts\" />
-    <Folder Include="Models\" />
-    <Folder Include="wwwroot\css\" />
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\js\" />
     <Folder Include="wwwroot\lib\bootstrap\" />
