--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /bin
 /.config
 /Models_temp
+Properties/PublishProfiles/FolderProfile.pubxml.user
+Properties/PublishProfiles/FolderProfile.pubxml.user
+RubyMine.csproj.user
