Add UploadFile Module

--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,8 @@
     "Attachment_PreviewUrl": "http://localhost/attachments/",
     "Attachment_DownloadUrl": "http://localhost/attachments/download/",
     "Admin_Role_id": "-1,-8,-135,",
-    "Koala_Project_id": 5
+    "Koala_Project_id": 5,
+    "UploadPath": "D:\\Bitnami\\redmineplusagile-4.1.1-7\\apps\\redmineplusagile\\htdocs\\files"
   },
   "JwtAuthorization": {
     "Key": "temp",
