--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 Properties/PublishProfiles/FolderProfile.pubxml.user
 Properties/PublishProfiles/FolderProfile.pubxml.user
 RubyMine.csproj.user
+Properties/PublishProfiles/FolderProfile.pubxml.user
