--- a/appsettings.json
+++ b/appsettings.json
@@ -18,6 +18,7 @@
     "RedmineUrl": "http://localhost",
     "Attachment_PreviewUrl": "http://localhost/attachments/",
     "Attachment_DownloadUrl": "http://localhost/attachments/download/",
+    "Issue_url": "http://server.logichealth.cn:9000/issues/",
     "Admin_Role_id": "-1,-8,-135,",
     "Koala_Project_id": 5,
     "UploadPath": "D:\\Bitnami\\redmineplusagile-4.1.1-7\\apps\\redmineplusagile\\htdocs\\files"
